--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,6 +3,7 @@
         <title>
             article one--- avi
         </title>
+        <meta name="viewport" content="width-device-width, initial-scale=1">
     </head>
     
     <body>
